--- a/css/styles.css
+++ b/css/styles.css
@@ -116,10 +116,11 @@ footer > p {
 }
 
 table {
-padding-right:10px;
 background-color: var(--light-blue);
-padding: 10px;
-margin: 10px;
+padding: 1%;
+margin: 2%;
+margin-left: auto;
+margin-right: auto;
 border-radius: 1%;
 border-bottom: 3px solid rgba(0, 0, 100, 0.1);
 border-right: 1px solid rgba(0, 0, 100, 0.1);
