--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@ Link into head of html:
   --sun-c: #f76414;
 
 
-
   --font-main: 'Zen Maru Gothic', sans-serif;
   --font-header: 'Zen Antique Soft', serif;
   --font-nav: 'Varela Round', sans-serif;
@@ -104,6 +103,7 @@ h2, h3, h1 {
 h1 {
   text-decoration: underline;
   text-align: center;
+  margin-top:40px;
 }
 
 p {
@@ -118,8 +118,7 @@ footer > p {
 table {
 background-color: var(--light-blue);
 padding: 1%;
-margin-top: 2%;
-margin-bottom: 2%;
+margin: 2%;
 margin-left: auto;
 margin-right: auto;
 border-radius: 1%;
@@ -196,6 +195,8 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
 
   .button,
   .button__secondary {
+    background-color: var(--dark-blue);
+    color: var(--bg-color);
     align-self: center;
   }
 
@@ -248,12 +249,12 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
   min-width: 30%;
 }
 
-.page-header__item:first-child {
+.page-header__item: first-child {
   text-align: left;
   flex-grow: 0;
 }
 
-.page-header__item:last-child {
+.page-header__item: last-child {
   flex-grow: 3;
   text-align: right;
 }
@@ -290,7 +291,7 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
    display: grid;
    /* grid-template-columns: 300px 300px 300px; fractions are better than pixels - they are responsive */
    grid-template-columns: 1fr 1fr;
-   grid-gap: 10px;
+   grid-gap: 20px;
    margin: 0;
 
  }}
@@ -298,6 +299,7 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
 
 
 .grid {
+  display: grid;
   grid-auto-rows: minmax(350px, max-content);
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 
