--- a/css/styles.css
+++ b/css/styles.css
@@ -332,10 +332,10 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
 @media all and (max-width: 500px) {
 
   body{
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 1%;
+    margin-right: 1%;
     padding-top: 30px;
-    padding: 10px;
+    padding: 2%;
   }
 
   .header-logo {
@@ -346,17 +346,16 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
   }
 
   main{
-    display:inline-block;
+    display: block;
     width: auto;
-    text-align: center;
-    margin: 10px;
-    padding: 10px;
+    margin: 2%;
+    padding: 2%;
   }
 
   .profile__portrait {
     width: 50%;
-    margin-right: 30%;
-    margin-left: 30%;
+    margin-right: 25%;
+    margin-left: 25%;
   }
 
   .grid {
@@ -456,7 +455,6 @@ body{
 }
 .cloud-back {
     animation: 40s cloud-move-reverse infinite alternate ease-in-out;
-
 }
 
 
