changed colour scheme

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,11 @@ Link into head of html:
 */
 
 :root {
-  --bg-color: #85ceff93;
+  --bg-color: #9dddff17;
   --txt-color: #042121;
   --light-blue: #cbfafa;
   --dark-blue: #065050;
-  --pale-blue: #b5dada;
+  --pale-blue: #05879159;
   --green: #1e8cf3;
   --sun-a: #edc655;
   --sun-b: #fcffad;
