changed colour scheme

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,9 @@ Link into head of html:
 :root {
   --bg-color: #9dddff17;
   --txt-color: #042121;
-  --light-blue: #cbfafa;
-  --dark-blue: #065050;
-  --pale-blue: #05879159;
+  --light-blue: #eefffffd;
+  --dark-blue: #033d3dc4;
+  --pale-blue: #0a4b5059;
   --green: #1e8cf3;
   --sun-a: #edc655;
   --sun-b: #fcffad;
