--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ border-right: 1px solid rgba(0, 0, 100, 0.1);
 
 th {
   background-color: var(--txt-color);
-  color: var(--bg-color);
+  color: white;
   text-align: center;
   border-radius: 3%;
   padding: 5px;
@@ -182,7 +182,7 @@ button,
   /* takes the font from the outer container */
   font-family: inherit;
   background-color: var(--dark-blue);
-  color: var(--bg-color);
+  color: white;
   text-decoration: none;
   padding: 10px;
   border-radius: 30px;
@@ -276,7 +276,7 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
 
 form {
   background-color: var(--dark-blue);
-  color: var(--pale-blue);
+  color: white;
   margin-top: 5%;
   margin-left: 30%;
   margin-right: 30%;
@@ -290,7 +290,7 @@ label, input[type=submit] {
   font-family: var(--font-nav);
   font-size: 18px;
   background-color: var(--dark-blue);
-  color: var(--pale-blue);
+  color: white;
   margin: 2% !important;
   margin-left: 10% !important;
   margin-right: 10% !important;
