--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@ a {
   color: inherit;
 }
 
+
+
 /* not in use:
 .link:visited {
   /* visited link
@@ -224,6 +226,11 @@ transition: [transition-property] [transition-duration] [transition-timing-funct
   margin: 30px;
   float: left;
   border-radius: 20%;
+}
+
+.project-img {
+  max-height: 200px;
+
 }
 
 .page-footer, form {
@@ -349,8 +356,8 @@ label:hover, input[type=submit]:hover {
 
 .grid__item {
  display: inline-block;
- text-align: center;
- width: 33%;
+ text-align: left;
+ 
  border-bottom: 4px solid rgba(0, 0, 100, 0.1);
  border-right: 1px solid rgba(0, 0, 100, 0.1);
 
@@ -373,7 +380,7 @@ label:hover, input[type=submit]:hover {
 .grid {
   grid-auto-rows: minmax(350px, max-content);
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-
+ 
   /* I like the look, so I will leave rows in
 
   .grid__item:last-child {
@@ -393,10 +400,10 @@ label:hover, input[type=submit]:hover {
 
 .grid__item {
   background-color: var(--light-blue);
-  border-radius: 20%;
+ 
   width: auto;
   min-height: auto;
-  padding: 20px;
+  padding: 5%;
 }
 
 
@@ -476,7 +483,7 @@ body{
   }
 
   .grid {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 
   .profile__portrait {
@@ -561,4 +568,5 @@ body{
 }
 
 
-/* Animations end here */
+/* Animations end here
+*/
