--- a/css/style.css
+++ b/css/style.css
@@ -56,23 +56,23 @@ Link into head of html:
 */
 
 :root {
-    --bg-color: #0674afb2;
+    --bg-color: #373B44;
     --txt-color: #042121;
-    --light-blue: #eefffffd;
+    --light-blue: #ffffff;
     --dark-blue: #033d3dc4;
     --pale-blue: #0a4b5059;
   
   
   
-    --font-main: 'Zen Maru Gothic', sans-serif;
-    --font-header: 'Zen Antique Soft', serif;
-    --font-nav: 'Varela Round', sans-serif;
+    --font-main: 'Zen Kaku Gothic Antique', sans-serif;
+    --font-header: 'Yusei Magic', sans-serif;
+    --font-nav: 'Lacquer', cursive;
   }
   
   
   body {
     background-color: var(--bg-color);
-    color: var(--txt-color);
+    color: var(--light-blue);
     font-family: var(--font-main);
     font-weight: 400;
     font-size: 16px;
@@ -81,26 +81,35 @@ Link into head of html:
     margin: 20px 80px;
     padding-left: 10%;
     padding-right: 10%;
+
+    background: #0F2027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+background: #373B44;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, #4286f4, #373B44);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #4286f4, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   }
   
   li {
-    background-color: var(--pale-blue);
+ 
     font-family: var(--font-nav);
-    font-size: 12px;
-    border-radius: 20%;
+    font-size: 15px; 
     padding: 3%;
     margin: 1%;
   }
   
-  h2, h3, h1 {
+  h2, h1 {
     font-family: var(--font-header);
     font-size: 30px;
     margin-top: 40px;
   }
   
   h1 {
-    text-decoration: underline;
+    text-decoration: none;
     text-align: center;
+
   }
   
   p {
@@ -151,6 +160,11 @@ Link into head of html:
     color: inherit;
   }
   
+  .email {
+      margin-top: -20px;
+    
+
+  }
   
   
   /* not in use:
@@ -179,7 +193,7 @@ Link into head of html:
     display: inline-block;
     /* takes the font from the outer container */
     font-family: inherit;
-    background-color: var(--dark-blue);
+    background-color: var(--bg-color);
     color: white;
     text-decoration: none;
     padding: 10px;
@@ -215,6 +229,7 @@ Link into head of html:
   .profile {
     max-width: 1000px;
     margin: 0 auto;
+    
   }
   
   .profile__portrait {
@@ -226,10 +241,10 @@ Link into head of html:
   
   .project-img {
     max-height: 200px;
-  
+    max-width: 100%;
   }
   
-  .page-footer, form {
+  .page-footer {
     clear: both;
     display: flex;
     text-align: center;
@@ -279,92 +294,47 @@ Link into head of html:
 
   #projects {
       margin-top: 15%;
+      display: grid;
   }
 
   #contact {
       margin-top: 15%;
-     
-  
   }
-  
-  form {
-    background-color: var(--dark-blue);
-    color: white;
-    margin-top: 5%;
-    margin-left: 30%;
-    margin-right: 30%;
-    border-radius: 10%;
-    box-sizing: border-box;
-    resize: vertical;
-    max-width: 400px;
+
+  #about {
+   padding-top: 5%;
+   padding-bottom: 5%;
+    color:rgb(39, 40, 85);
   }
-  
-  label, input[type=submit] {
-    font-family: var(--font-nav);
-    font-size: 18px;
-    background-color: var(--dark-blue);
-    color: white;
-    margin: 2% !important;
-    margin-left: 10% !important;
-    margin-right: 10% !important;
-    border: 0;
+
+  .work-header {
+    color:rgb(26, 28, 100);
   }
-  
-  textarea, input[type=standard-label], input[type=email], input[type=tel] {
-    background-color: var(--pale-blue);
-    color: var(--txt-color);
-    font-family: var(--font-main);
-    font-size: 25px;
-    display: inline-block;
-    justify-content: center;
-    margin: 1% !important;
-    margin-left: 10% !important;
-    margin-right: 10% !important;
-    padding-bottom: 3%;
-    border-radius: 5%;
-  }
-  .textarea-length {
-    text-align:center;
-    font-size: 18px;
-  }
-  
-  .email {
-    margin-top: 1%;
-    padding-top: 1%;
-  }
-  input[type=submit] {
-    padding-bottom: 10px;
-  }
-  
-  textarea {
-    font-size: 25px;
-    padding-bottom: 50%;
-    border-radius: 20%;
-    align-self: center;
-    margin-left: 5% !important;
-    margin-right: 5% !important;
-    box-sizing: border-box;
-    resize: inherit;
-    width: 85%;
-  }
-  
-  label:hover, input[type=submit]:hover {
-    cursor: pointer;
-    /* reduces the opacity of the button to 80% */
-    opacity: 0.8;
-    text-decoration: underline;
-    color: var(--pale-blue);
-  }
+
+  #hero {
+      margin-top: 20%;
+      margin-bottom: 10%;
+      }
+
+.moin {
+    font-size: 50px;
+    text-align: left;
+    margin-bottom:-4%;
+}
+    
+ h3 {
+            color: rgb(37, 39, 112);
+            font-family: var(--font-main);
+          }
+
+
+
   
   /* Fallback option for the grid layout underneath */
   
   /* start grid fallback */
   
-  .grid__item {
-   display: inline-block;
-   text-align: left;
-  
-  }
+ 
   
   /* end grid fallback */
   
@@ -379,10 +349,16 @@ Link into head of html:
    }}
   /* End of Fallback Option */
   
-  
+   .grid__item {
+    background-color: rgba(0, 0, 0, 0.651);
+    color: rgba(255, 255, 255, 0.76);
+    min-width: 400px;
+    text-align: left;
+    padding: 6%;
+  }
   .grid {
-    grid-auto-rows: minmax(350px, max-content);
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: minmax(fit-content, max-content);
+    grid-template-columns: repeat(auto-fit, 1fr);
    
     /* I like the look, so I will leave rows in
   
@@ -401,19 +377,17 @@ Link into head of html:
   */
   }
   
-  .grid__item {
-    background-color: var(--light-blue);
-   
-    width: auto;
-    min-height: auto;
-    padding: 5%;
-  }
+ 
   
   
   /* media query to resize on smaller formats starts here */
   
   @media all and (max-width: 500px) {
   
+    .grid {
+       
+        grid-template-columns: 1fr;
+    }    
     body{
       margin-left: 1%;
       margin-right: 1%;
@@ -428,47 +402,15 @@ Link into head of html:
     top: 5px;
     }
   
-    main{
-      display: block;
-      width: auto;
-      margin: 2%;
-      padding: 2%;
-    }
-  
+
     .profile__portrait {
       width: 50%;
       margin-right: 25%;
       margin-left: 25%;
     }
-  
-    .grid {
-      grid-template-columns: 1fr;
-    }
-  
-    .grid__item:last-child {
-      grid-column: auto / auto;
-      grid-row: auto / auto;
-      min-height: 350px;
-      min-width: 13em;
-    }
-    form {
-      display: inline-block;
-      width:80%;
-    }
-    label, input, input[type=submit] {
-      width: 80%;
-      padding: 5px;
-      margin-bottom: 5px;
-      font-size: 15px;
-    }
-    input[type=email], input[type=tel], textarea {
-      font-size: 12px;
-    }
-    textarea {
-      font-size: 12px;
-      width: 80%;
-      margin: 2% !important;
-    }
+   
+
+    
     h1 {
       font-size: 22px;
       text-align: center;
@@ -485,26 +427,23 @@ Link into head of html:
       display: inline-block;
     }
   
-    .grid {
-      grid-template-columns: 1fr;
-    }
   
     .profile__portrait {
       width: 32%;
     }
-    textarea {
-      width: 80%;
-    }
-    label, input, input[type=submit] {
-      width: 80%;
-    }
-    input[type=email], input[type=tel], textarea {
-      font-size: 20px;
-  }
+    .grid {
+        grid-template-columns: 1fr;
+    } 
+
+    .grid__item {
+        max-width: 500px;
+      }
   
   @media all and (max-width: 950px) {
   
     h1 {
       font-size: 25px;
     }
-  }
+    
+   
+  }}
