--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ Link into head of html:
     --light-blue: #031f4b;
     --dark-blue: #033d3dc4;
     --pale-blue: #0a4b5059;
+
+    --link-color: #579bf5;
+    --project-header:#1669eea1;
   
   
   
@@ -87,8 +90,8 @@ background: -webkit-linear-gradient(to bottom, #2C5364, #203A43, #0F2027);  /* C
 background: linear-gradient(to bottom, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 background: #373B44;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #08749be5, #373B44);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to bottom, #3a7bd5,#505b75,#3d4861, #373B44);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, #3a7bd5,#505b75, #3d4861, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   }
   
@@ -109,7 +112,7 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
   h2 {
       font-size: 18px;
       color: #1669eea1;
-     
+     color: #aad1fd9d;
   }
   
   h1 {
@@ -170,7 +173,7 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
   }
 
   .blue-link {
-    color: #1669eea1;
+    color:#aad1fd9d;
   }
   
   .email {
@@ -179,6 +182,7 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
   
   .white {
       color: var(--txt-color);
+      color: #aad1fd9d;
   }
   /* not in use:
   .link:visited {
@@ -207,12 +211,13 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
     /* takes the font from the outer container */
     font-family: inherit;
     background-color: var(--bg-color);
-    color: white;
+    background-color: #e3f869;
+    color: rgb(10, 7, 165);
     text-decoration: none;
     padding: 10px;
-    border-radius: 30px;
+    border-radius: 20px;
       /* width of the border, type, color */
-      border-bottom: 2px solid rgba(0, 0, 100, 0.2);
+      
   /* animation: transition start:
   transition: [transition-property] [transition-duration] [transition-timing-function] [transition-delay];
   */
@@ -232,6 +237,7 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
     /* reduces the opacity of the button to 80% */
     opacity: 0.8;
     color: rgb(87, 155, 245);
+   
   }
   
   
@@ -251,6 +257,7 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
     margin: 30px;
     float: left;
     border-radius: 20%;
+    
   }
   
   .project-img {
@@ -271,8 +278,7 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
   
   .page-header {
     display: flex;
-    width: 100%;
-    padding: 10px;
+    width: 100%; 
     margin-bottom: 20px;
     justify-content: space-evenly;
   }
@@ -317,9 +323,14 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
 
   #about {
    padding-top: 5%;
-   padding-bottom: 5%;
-    
+   padding-bottom: 5%;    
     font-size: 14px;
+  }
+
+  .icon {
+      max-width: 40px;
+      max-height: 40px;
+      margin-right: 2%;
   }
 
   
@@ -334,15 +345,24 @@ background: linear-gradient(to bottom, #08749be5, #373B44); /* W3C, IE 10+/ Edge
     font-size: 50px;
     text-align: left;
     margin-bottom:-4%;
-    color: #031f4b;
+    color: #e3f869;
     font-size: 72px;
-
-
 }
-    
+.moinmoin {
+    color:#aad1fd9d;
+    color: var(--light-blue);
+}
+
+.work-header{
+    color:#aad1fd9d;
+}
+
+  
 .about {
 min-width: 100%;
     text-align: left;
+    color: #aad1fd9d;
+    color:var(--light-blue);
 }
 
 
