--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ background: linear-gradient(to bottom, #3a7bd5,#505b75, #3d4861, #373B44); /* W3
   }
   
   .page-footer {
-    margin-top: 40%;
+    margin-top: 28%;
   }
   
   .page-header {
@@ -316,7 +316,7 @@ background: linear-gradient(to bottom, #3a7bd5,#505b75, #3d4861, #373B44); /* W3
 
 
   #contact {
-      margin-top: 15%;
+      margin-top: 20%;
   
   }
 
@@ -411,6 +411,16 @@ overflow-x: hidden;
   margin-right: -10%;
   
   min-width:90%;
+}
+.second-img {
+  margin-left:15%;
+}
+.single-img {
+  margin-left: 30%;
+}
+.contact {
+  text-align: center;
+  font-size: 20px;
 }
 
 
